Made improvements to login app
- better incorrect login system
- password matching validation when creating account
- account created validation text

--- a/login_app/templates/account-created.html
+++ b/login_app/templates/account-created.html
@@ -2,6 +2,9 @@
 
 {% block body %}
     <h1 class="text-center">Create an Account</h1>
+
+    <h4 style="color:green" class="text-center">Account Successfully Created!</h4>
+
     <form action="/register" method="post" class="form-group">
       <label for="username">Username: </label>
       <input required name="username" id="username" type="text" class="form-control"><br>
