--- a/login_app/templates/index.html
+++ b/login_app/templates/index.html
@@ -1,38 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <title>Log In</title>
-  </head>
-  <body>
-    <style>
-      body, html {
-        margin-top: 20px;
-      }
+{% extends "layout.html" %}
 
-      .form-group {
-        width: 80%;
-        margin: 0 auto;
-      }
+{% block body %}
+  <h1 class="text-center">Log In</h1>
+  <form action="/login" method="post" class="form-group">
+    <label for="username">Username: </label>
+    <input required name="username" id="username" type="text" class="form-control"><br>
 
-      p {
-        margin-top: 20px;
-        margin-left: 84px;
-      }
-    </style>
+    <label for="password">Password: </label>
+    <input required name="password" id="password" type="password" class="form-control"><br>
 
-    <h1 class="text-center">Log In</h1>
-    <form action="/login" method="post" class="form-group">
-      <label for="username">Username: </label>
-      <input required name="username" id="username" type="text" class="form-control"><br>
+    <input type="submit" value="Log In" class="btn btn-primary">
+  </form>
 
-      <label for="password">Password: </label>
-      <input required name="password" id="password" type="password" class="form-control"><br>
-
-      <input type="submit" value="Log In" class="btn btn-primary">
-    </form>
-
+  <div class="link-div">
     <p>Don't have an account? <a href="create-account">Create an account</a></p>
-  </body>
-</html>
+  </div>
+{% endblock %}
